# chat

./: .env  .gitignore  Cargo.toml  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml  app.yml  chat.yml  test.rest
chat_server/fixtures/: test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  mod.rs  msgs.rs  user.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  mod.rs  msgs.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
migrations/: 20241108140131_initial.sql  20241111144705_workspace.sql  20241113053525_triggers.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
