[workspace]
members = [ "chat_core","chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["http2", "multipart"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.132"
chat_core = { path = "./chat_core" }
jwt-simple = { version = "0.12.10", features = ["pure-rust"], default-features = false }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "compression-full", "cors", "trace"] }
