[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = "0.1.2"
jwt-simple = { version = "0.12.10", features = ["pure-rust"], default-features = false }
serde = { workspace = true }
serde_json = "1.0.132"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
sqlx-db-tester = "0.5.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
