[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
hex-literal = "0.4.1"
http-body-util = "0.1.2"
jwt-simple = { version = "0.12.10", features = ["pure-rust"], default-features = false }
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.132"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = "0.5.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "compression-full", "cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
