[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
hex-literal = "0.4.1"
http-body-util = "0.1.2"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = "0.5.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chat_core = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jwt-simple = { workspace = true }
